tests/pos/qualif-template-00.fq

qualif Zog(v:a, z:b) : (v = z)

bind 0 x : {v : int | true}
bind 1 q : {v : int | true}
bind 2 y : {v : int | v = 10}
bind 3 r : {v : int | true }
bind 4 s : {v : int | $k0[x := r] } 
bind 5 t : {v : int | v = r + 1   }  


constraint:
  env [1]
  lhs {v : int | v = q}
  rhs {v : int | $k0[x:=q] }
  id 1 tag []

constraint: 
  env [3; 4; 5]
  lhs {v : int | v = s + 1 }
  rhs {v : int | $k0[x:=t] }
  id 3 tag []

constraint:
  env [2]
  lhs {v : int | $k0[x:=y]}
  rhs {v : int | v = 10}
  id 3 tag []

wf:
  env [0]
  reft {v : int | $k0}
